<resources>
    <string name="app_name">Asclepius</string>
    <string name="title_home">Home</string>
    <string name="title_detector">Detector</string>
    <string name="title_history">History</string>

    <string name="detector_page_title">Analyze cancer type</string>
    <string name="image_placeholder">image placeholder</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="history_page_title">Analyze History</string>
    <string name="empty_history">History data is still empty</string>
    <string name="result_title">Result</string>
    <string name="result_date">Result Date</string>
    <string name="result">Hasil analisis:</string>
    <string name="save_result">Simpan Hasil</string>
    <string name="result_saved">Data berhasil di simpan</string>
    <string name="analyze_error">No text recognized!</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="already_saved">Already Saved</string>
    <string name="saved_at">save at:</string>
    <string name="error_image_not_found">image failed to load</string>
    <string name="article_name">Article Names</string>
    <string name="article_description">Article Description</string>
    <string name="home_page_title">Recent cancer article</string>
    <string name="empty_articles">There is no recent article at the moment</string>
</resources>